# activeObject

./: CMakeLists.txt  LICENSE
include/activeObject/: ActiveObject.h
src/: ActiveObject.cpp  main.cpp
test/: TestActiveObject.cpp
